--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -64,15 +64,16 @@
 .icon-male:before { content: '\e83e'; } /* '' */
 .icon-mask:before { content: '\e83f'; } /* '' */
 .icon-meepass:before { content: '\e840'; } /* '' */
-.icon-menu:before { content: '\e841'; } /* '' */
-.icon-moon:before { content: '\e842'; } /* '' */
-.icon-play:before { content: '\e843'; } /* '' */
-.icon-plus:before { content: '\e844'; } /* '' */
-.icon-pricetag:before { content: '\e845'; } /* '' */
-.icon-pricetag-empty:before { content: '\e846'; } /* '' */
-.icon-question-mark:before { content: '\e847'; } /* '' */
-.icon-refresh:before { content: '\e848'; } /* '' */
-.icon-filters:before { content: '\e849'; } /* '' */
-.icon-telescope:before { content: '\e84a'; } /* '' */
-.icon-search-planet:before { content: '\e84b'; } /* '' */
-.icon-trash:before { content: '\e84c'; } /* '' */
+.icon-moon:before { content: '\e841'; } /* '' */
+.icon-play:before { content: '\e842'; } /* '' */
+.icon-plus:before { content: '\e843'; } /* '' */
+.icon-pricetag:before { content: '\e844'; } /* '' */
+.icon-pricetag-empty:before { content: '\e845'; } /* '' */
+.icon-question-mark:before { content: '\e846'; } /* '' */
+.icon-refresh:before { content: '\e847'; } /* '' */
+.icon-filters:before { content: '\e848'; } /* '' */
+.icon-telescope:before { content: '\e849'; } /* '' */
+.icon-search-planet:before { content: '\e84a'; } /* '' */
+.icon-trash:before { content: '\e84b'; } /* '' */
+.icon-menu:before { content: '\e84c'; } /* '' */
+.icon-code:before { content: '\e84d'; } /* '' */
