--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -128,6 +128,7 @@
   align-items: center;
   width: 100%;
   margin-bottom: 30px;
+  margin-top: 70px;
 }
 
 
@@ -149,6 +150,7 @@
 	background: #454545;
 	color: white;
 	border-radius: 20px!important;
+	width: 110%;
 }
 .segment__part:not(.--active):hover {
 }
